[package]
name = "scryfall"
version = "0.1.0"
authors = ["Cerek Hillen <cerekh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
